--- a/smart-farm-frontend/package.json
+++ b/smart-farm-frontend/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "chart.js": "^3.7.1",
     "ng-zorro-antd": "^13.1.1",
+    "ng2-charts": "^3.0.8",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
