--- a/smart-farm-frontend/package.json
+++ b/smart-farm-frontend/package.json
@@ -16,10 +16,14 @@
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/localize": "~13.3.0",
     "@angular/material": "^13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.0",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "ng-zorro-antd": "^13.1.1",
     "ng2-charts": "^3.0.8",
