--- a/smart-farm-backend/.env
+++ b/smart-farm-backend/.env
@@ -4,7 +4,7 @@ DEV_DB_HOST = "smart-farm-project"
 DEV_DB_PORT = 3306
 DEV_DB_DATABASE = "smart_farm"
 DEV_DB_USER = "root"
-DEV_DB_PASSWORD = ""
+DEV_DB_PASSWORD = "super-secret-password"
 
 # Production
 PROD_APP_PORT = 1000
@@ -12,7 +12,7 @@ PROD_DB_HOST = "smart-farm-project"
 PROD_DB_PORT = 3306
 PROD_DB_DATABASE = "smart_farm"
 PROD_DB_USER = "root"
-PROD_DB_PASSWORD = ""
+PROD_DB_PASSWORD = "super-secret-password"
 
 # Test
 TEST_APP_PORT = 1000
@@ -20,4 +20,4 @@ TEST_DB_HOST = "localhost"
 TEST_DB_PORT = 3306
 TEST_DB_DATABASE = "smart_farm"
 TEST_DB_USER = "root"
-TEST_DB_PASSWORD = ""
+TEST_DB_PASSWORD = "super-secret-password"
