node & mysql -> connected

--- a/smart-farm-backend/.env
+++ b/smart-farm-backend/.env
@@ -16,7 +16,7 @@ PROD_DB_PASSWORD = "super-secret-password"
 
 # Test
 TEST_APP_PORT = 1000
-TEST_DB_HOST = "localhost"
+TEST_DB_HOST = "mysql-service.default.svc.cluster.local"
 TEST_DB_PORT = 3306
 TEST_DB_DATABASE = "smart_farm"
 TEST_DB_USER = "root"
