--- a/smart-farm-db/PhpMyAdmin/deployment.yml
+++ b/smart-farm-db/PhpMyAdmin/deployment.yml
@@ -21,11 +21,11 @@ spec:
           ports:
             - containerPort: 80
           env:
-            - name: DEV_DB_HOST
+            - name: PMA_HOST
               value: mysql-service
-            - name: DEV_DB_PORT
+            - name: PMA_PORT
               value: "3306"
-            - name: DEV_DB_PASSWORD
+            - name: MYSQL_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: mysql-secrets
