--- a/smart-farm-db/PhpMyAdmin/deployment.yml
+++ b/smart-farm-db/PhpMyAdmin/deployment.yml
@@ -30,3 +30,24 @@ spec:
                 secretKeyRef:
                   name: mysql-secrets
                   key: root-password
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: phpmyadmin-service
+spec:
+  type: NodePort
+  selector:
+    app: phpmyadmin
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: mysql-secrets
+type: Opaque
+data:
+  root-password: c3VwZXItc2VjcmV0LXBhc3N3b3Jk
