--- a/smart-farm-db/PhpMyAdmin/http-ingress.yml
+++ b/smart-farm-db/PhpMyAdmin/http-ingress.yml
@@ -1,13 +1,18 @@
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: http-ingress
+  name: phpmyadmin-http-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
     - http:
         paths:
-          - path: /phpmyadmin
+          - path: /testpath
+            pathType: Prefix
             backend:
-              serviceName: phpmyadmin
-              servicePort: 80
+              service:
+                name: phpmyadmin-service
+                port:
+                  number: 80
