--- a/smart-farm-frontend/deployment.yml
+++ b/smart-farm-frontend/deployment.yml
@@ -15,7 +15,8 @@ spec:
     spec:
       containers:
         - name: angular
-          image: smart-farm-frontend:v1
+          image: chakphetph/smart-farm-frontend:v1
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
 ---
@@ -24,11 +25,21 @@ kind: Service
 metadata:
   name: frontend-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: angular
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
-      nodePort: 31000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend-service-loadbalancer
+spec:
+  type: LoadBalancer
+  selector:
+    app: angular
+  ports:
+    - protocol: TCP
+      port: 80
