--- a/smart-farm-backend/.env
+++ b/smart-farm-backend/.env
@@ -3,7 +3,7 @@ DEV_APP_PORT = 1000
 DEV_DB_HOST = "smart-farm-project"
 DEV_DB_PORT = 3306
 DEV_DB_DATABASE = "smart_farm"
-DEV_DB_USER = "root"
+DEV_DB_USER = "root_dev"
 DEV_DB_PASSWORD = "super-secret-password"
 
 # Production
@@ -11,13 +11,13 @@ PROD_APP_PORT = 1000
 PROD_DB_HOST = "smart-farm-project"
 PROD_DB_PORT = 3306
 PROD_DB_DATABASE = "smart_farm"
-PROD_DB_USER = "root"
+PROD_DB_USER = "root_pro"
 PROD_DB_PASSWORD = "super-secret-password"
 
 # Test
 TEST_APP_PORT = 1000
 TEST_DB_HOST = "mysql-service.default.svc.cluster.local"
 TEST_DB_PORT = 3306
-TEST_DB_DATABASE = "smart_farm"
-TEST_DB_USER = "root"
+TEST_DB_DATABASE = "smart_farm_asdasd"
+TEST_DB_USER = "admin_test"
 TEST_DB_PASSWORD = "super-secret-password"
