BACKEND ALL READY!

--- a/smart-farm-backend/package.json
+++ b/smart-farm-backend/package.json
@@ -20,6 +20,7 @@
     "http": "0.0.1-security",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "uuid4": "^2.0.2"
   }
 }
