--- a/smart-farm-frontend/package.json
+++ b/smart-farm-frontend/package.json
@@ -25,6 +25,8 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
+    "chartjs-adapter-date-fns": "^2.0.0",
+    "date-fns": "^2.28.0",
     "ng-zorro-antd": "^13.1.1",
     "ng2-charts": "^3.0.8",
     "rxjs": "~7.5.0",
