--- a/smart-farm-frontend/package.json
+++ b/smart-farm-frontend/package.json
@@ -30,6 +30,7 @@
     "ng-zorro-antd": "^13.1.1",
     "ng2-charts": "^3.0.8",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
