--- a/smart-farm-frontend/package.json
+++ b/smart-farm-frontend/package.json
@@ -25,7 +25,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
-    "chartjs-adapter-date-fns": "^2.0.0",
+    "chartjs-adapter-date-fns": "^1.1.0-beta.1",
     "date-fns": "^2.28.0",
     "ng-zorro-antd": "^13.1.1",
     "ng2-charts": "^3.0.8",
