--- a/smart-farm-backend/backend-developement.yml
+++ b/smart-farm-backend/backend-developement.yml
@@ -17,3 +17,15 @@ spec:
         image: smart-farm-backend:v1
         ports:
         - containerPort: 1000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend-service
+spec:
+  selector:
+    app: node
+  ports:
+    - protocol: TCP
+      port: 1000
+      targetPort: 1000
